# OtelMiner

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.db-initializer.yml  docker-compose.preprocessor.yml  docker-compose.yml  find_min_max_start_time.sh  first_pdm_single  quickstart.bat  quickstart.sh
ocaml/otel_preprocessor/: .ocamlformat  dune-project  otel_preprocessor.opam
ocaml/otel_preprocessor/lib/model/activity/: activity.ml
ocaml/otel_preprocessor/lib/model/ltl/: dune
ocaml/otel_preprocessor/lib/model/prob_declare/: dune
ocaml/otel_preprocessor/lib/otel/decoder/: dune  (+2 more)
ocaml/otel_preprocessor/lib/otel_to_prob_declare_converter/: dune  otel_to_prob_declare_converter.ml
ocaml/otel_preprocessor/lib/rabbit/: dune  message_processor.ml  message_processor.mli
ocaml/otel_preprocessor/test/: test-data.csv
ocaml/otel_preprocessor/test/otel_to_prob_declare_converter/: test_otel_to_prob_declare_converter.ml
ocaml/otel_to_probdeclare_converter/: .ocamlformat  dune-project  otel_to_probdeclare_converter.opam
ocaml/otel_to_probdeclare_converter/_build/: .db  .digest-db  log
ocaml/otel_to_probdeclare_converter/_build/default/: otel_to_probdeclare_converter.dune-package
ocaml/otel_to_probdeclare_converter/lib/: dune  otel_to_probdeclare_converter.ml
ocaml/otel_to_probdeclare_converter/lib/otel_decoder/: otel_decoder.ml  otel_decoder.mli
ocaml/otel_to_probdeclare_converter/lib/otel_encoder/: dune  otel_encoder.mli
ocaml/otel_to_probdeclare_converter/lib/otel_to_prob_declare_converter/: dune  otel_to_prob_declare_converter.ml  otel_to_prob_declare_converter.mli
ocaml/otel_to_probdeclare_converter/lib/rabbit/: dune  message_processor.ml  message_processor.mli
ocaml/otel_to_probdeclare_converter/lib/span_tree/: dune  span_tree.ml  span_tree.mli
ocaml/otel_to_probdeclare_converter/lib/util/: dune  util.ml
ocaml/otel_to_probdeclare_converter/test/: dune  dynatrace_trace.json  jaeger_5575e1e883a056898c9ddee917664f9a.json  jaeger_trace.json  jaeger_trace_declare_model  otel-generator-trace.json  processed_ac31d6a4e6fab4b650a501274d48d3c5  span_tree_from_jaeger_5575e1e883a056898c9ddee917664f9a.json  span_tree_from_jaeger_trace.json  trace.json  trace_span.json
ocaml/otel_to_probdeclare_converter/test/otel_to_prob_declare_converter/: dune  test_otel_to_prob_declare_converter.ml
(+342 files in other folders)
