(lang dune 3.16)

(name otel_preprocessor)

(generate_opam_files true)

(source
 (github git@github.scch.at:SCCH-GMBH/master-thesis-freiseisen.git))

(authors "Lukas Freiseisen")

(maintainers "Lukas Freiseisen")

(license LICENSE)

(documentation https://github.scch.at/SCCH-GMBH/master-thesis-freiseisen)

(package
 (name otel_preprocessor)
 (synopsis "OTEL preprocessor")
 (description
  "Converts otel spans into span_tree")
 (depends
  ocaml
  dune
  (opentelemetry
   (= 0.9))
  (base64
   (= 3.5.1))
  (yojson
   (= 2.2.2))
  (amqp-client-async
   (= 2.3.0))
  (ounit2
   (= 2.2.7)))
 (tags
  ("process mining"
   ,
   "probabilistic declarative process mining"
   ,
   "LTL"
   ,
   "otel"
   ,
   "ProbDeclare")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
