(lang dune 3.16)

(name otel_to_probdeclare_converter)

(generate_opam_files true)

(source
 (github git@github.scch.at:SCCH-GMBH/master-thesis-freiseisen.git))

(authors "Lukas Freiseisen")

(maintainers "Lukas Freiseisen")

(license LICENSE)

(documentation https://github.scch.at/SCCH-GMBH/master-thesis-freiseisen)

(package
 (name otel_to_probdeclare_converter)
 (synopsis "OTEL to ProbDeclare")
 (description "A converter that accepts otel-spans via RabbitMQ and converts them to ProbDeclare clauses.")
 (depends ocaml dune)
 (tags
  ("process mining", "probabilistic declarative process mining", "LTL", "otel", "ProbDeclare")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
